add task solution

--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -3,4 +3,5 @@ $day-size: 100px;
 $day-hover-color: #ffbfcb;
 $day-margin: $day-gap + $day-size;
 $calendar-columns: 7;
-$calendar-size: $day-margin * $calendar-columns;
+$week-size: $day-size * $calendar-columns;
+$calendar-size: $week-size + ($calendar-columns - 1);
