add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,8 +39,7 @@ $days-of-week: (
 .calendar__day {
   width: $day-size;
   height: $day-size;
-
-  // margin: 0 $gap $gap 0;
+  margin: 0 $gap $gap 0;
   background-color: $grey;
   border: $border-width solid black;
   display: flex;
