--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,77 @@
+$day-color: #eee;
+$cell-size: 100px;
+$calendar-days: 31;
+$font-family: Arial, sans-serif;
+$font-size: 30px;
+$duration: 0.5s;
+
+$gap: 1px;
+$columns: 7;
+$padding: 10px;
+
+$start-day: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
+
+.html {
+  font-family: $font-family;
+  font-size: $font-size;
+}
+
 body {
   margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar {
+  display: flex;
+  padding: 0 10px;
+  width: 7 * $cell-size + 6 * $gap;
+  flex-wrap: wrap;
+  gap: $gap;
+  border: 2px solid red;
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    border: 1px solid black;
+    background-color: $day-color;
+    width: $cell-size;
+    height: $cell-size;
+    transition-duration: $duration;
+    cursor: pointer;
+    &:hover {
+      background-color: #ffbfcb;
+      transform: translate(0, -20px);
+    }
+  }
+
+  @for $numberday from 1 through 31 {
+    .calendar__day:nth-child(n + #{$numberday})::before {
+      content: '#{$numberday}';
+    }
+  }
+}
+
+@each $day, $i in $start-day {
+  .calendar--start-day-#{$day} .calendar__day:first-child {
+    margin-left: calc(#{$i} * 100px + #{$i * 1px});
+  }
+}
+
+@for $numberday from 28 through 31 {
+  .calendar--month-length-#{$numberday} :nth-child(n + #{$numberday + 1}) {
+    display: none;
+  }
 }
