--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -44,19 +44,18 @@ $weekdays: (
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    transition: all 0.5s;
+    transition: 0.5s;
   }
 
   @for $day from 1 through 31 {
     &__day:nth-child(#{$day})::before {
       content: '#{$day}';
       font-size: 30px;
-      font-family: Arial, Helvetica, sans-serif;
+      font-family: Arial, sans-serif;
     }
   }
 
   &__day:hover {
     background-color: #ffbfcb;
-    transform: translateY(-20px);
   }
 }
