--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,71 @@
 body {
   margin: 0;
 }
+
+.calendar {
+  margin: 0 auto;
+  margin-top: 131px;
+  display: flex;
+  max-width: 708px;
+  flex-wrap: wrap;
+
+  &__day {
+    box-sizing: border-box;
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    border: 1px solid black;
+    margin-left: 1px;
+    margin-top: 1px;
+    background-color: #eee;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    font-size: 14px;
+    font-weight: bold;
+    transition-duration: 500ms;
+
+    &:hover {
+      cursor: pointer;
+      transform: translateY(-20px);
+      background-color: #ffbfcb;
+    }
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: normal;
+        font-size: 30px;
+        text-align: center;
+        position: absolute;
+        width: 100px;
+        height: 100px;
+        line-height: 100px;
+      }
+    }
+  }
+
+  $days: (
+    'mon': 1,
+    'tue': 2,
+    'wed': 3,
+    'thu': 4,
+    'fri': 5,
+    'sat': 6,
+    'sun': 7,
+  );
+
+  @each $day, $column in $days {
+    &--start-day-#{$day} .calendar__day:nth-child(1) {
+      margin-left: calc(((#{$column} - 1) * 100px) + #{$column}px);
+    }
+  }
+
+  @for $length from 28 through 31 {
+    &--month-length-#{$length} .calendar__day:nth-child(n + #{$length + 1}) {
+      display: none;
+    }
+  }
+}
