--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,13 +5,13 @@ $border-width: 1px;
 $gap: 1px;
 $padding: 10px;
 $days-of-week: (
-  sun: 0,
-  mon: 1,
-  tue: 2,
-  wed: 3,
-  thu: 4,
-  fri: 5,
-  sat: 6,
+  mon: 0,
+  tue: 1,
+  wed: 2,
+  thu: 3,
+  fri: 4,
+  sat: 5,
+  sun: 6,
 );
 
 @mixin transition($properties...) {
@@ -25,9 +25,7 @@ $days-of-week: (
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: calc(
-    (($day-size + $border-width * 2) * 7) + ($gap * (7 - 1)) + ($padding * 2)
-  );
+  width: calc((($day-size + $border-width * 2) * 7) + ($gap * (7 - 1)));
   padding: $padding;
   margin: auto;
   position: absolute;
