add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -67,11 +67,7 @@ $days-of-week: (
 
 @each $day, $index in $days-of-week {
   .calendar--start-day-#{$day} .calendar__day:first-child {
-    @if $index == 0 {
-      margin-left: calc(($day-size + $border-width * 2 + $gap / 2) * 6);
-    } @else {
-      margin-left: calc(($day-size + $border-width * 2 + $gap / 2) * $index);
-    }
+    margin-left: calc(($day-size + $border-width + $gap) * $index);
   }
 }
 
