--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -4,12 +4,12 @@ $gap: 1px;
 $padding: 10px;
 $max-day-size: 100px;
 $days-of-week: (
-  sun: 0,
-  mon: 1,
-  tue: 2,
-  wed: 3,
-  thu: 4,
-  fri: 5,
-  sat: 6,
+  'sun': 6,
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
 );
 $month-lengths: (28, 29, 30, 31);
