--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,7 +28,7 @@ body {
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    transition: transform 0.5s;
+    transition: all 0.5s;
 
     &:hover {
       background-color: #ffbfcb;
