--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
-body {
-  margin: 0;
-}
+@import './utils/variabeles';
+@import './blocks/body';
+@import './blocks/calendar';
+@import './blocks/calendar__day';
