--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,15 +4,7 @@ $day-size: 100px;
 $border-width: 1px;
 $gap: 1px;
 $padding: 10px;
-$days-of-week: (
-  mon: 0,
-  tue: 1,
-  wed: 2,
-  thu: 3,
-  fri: 4,
-  sat: 5,
-  sun: 6,
-);
+$days-of-week: (1 'mon', 2 'tue', 3 'wed', 4 'thu', 5 'fri', 6 'sat', 7 'sun');
 
 @mixin transition($properties...) {
   transition: $properties 0.5s ease;
@@ -25,8 +17,8 @@ $days-of-week: (
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: calc((($day-size + $border-width * 2) * 7) + ($gap * (7 - 1)));
-  padding: $padding;
+  gap: $gap;
+  width: 707px;
   margin: auto;
   position: absolute;
   top: 50%;
@@ -35,16 +27,15 @@ $days-of-week: (
 }
 
 .calendar__day {
+  box-sizing: border-box;
   width: $day-size;
   height: $day-size;
-  margin: 0 $gap $gap 0;
   background-color: $grey;
   border: $border-width solid black;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-  cursor: pointer;
 
   &::before {
     content: counter(day);
@@ -56,6 +47,7 @@ $days-of-week: (
   &:hover {
     background-color: $pink;
     transform: translateY(-20px);
+    cursor: pointer;
 
     @include transition(background-color, transform);
   }
@@ -65,14 +57,16 @@ $days-of-week: (
   }
 }
 
-@each $day, $index in $days-of-week {
-  .calendar--start-day-#{$day} .calendar__day:first-child {
-    margin-left: calc(($day-size + $border-width + $gap) * $index);
-  }
-}
-
 @for $i from 28 through 31 {
   .calendar--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
     display: none;
+  }
+}
+
+@each $index, $day in $days-of-week {
+  .calendar--start-day-#{$day} {
+    .calendar__day:first-child {
+      margin-left: calc((#{$index} - 1) * (#{$day-size} + #{$gap}));
+    }
   }
 }
