--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,75 @@
-body {
+$day-background-color: #eee;
+$hover-day-background-color: #ffbfcb;
+$border-color: black;
+$size-border: 1px;
+$size-gap: 1px;
+$size-day: 100px;
+$size-padding: 10px;
+$size-calendar: calc(($size-day * 7) + ($size-gap * 6) + ($size-padding * 2));
+$week-days: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
+
+html {
   margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar {
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  padding: 10px;
+  width: 726px;
+
+  @each $day, $day-num in $week-days {
+    &--start-day-#{$day} :first-child {
+      margin-left: calc(($size-day + $size-gap) * $day-num);
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} :nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+    box-sizing: border-box;
+    height: $size-day;
+    width: $size-day;
+    background-color: $day-background-color;
+    border: $size-border solid $border-color;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+      }
+    }
+
+    // &:hover {
+    //   cursor: pointer;
+    //   transition: transform 0.5s;
+    //   background-color: $hover-day-background-color;
+    //   transform: translateY(-20px);
+    // }
+  }
 }
