--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -65,11 +65,11 @@ html {
       }
     }
 
-    // &:hover {
-    //   cursor: pointer;
-    //   transition: transform 0.5s;
-    //   background-color: $hover-day-background-color;
-    //   transform: translateY(-20px);
-    // }
+    &:hover {
+      cursor: pointer;
+      transition: transform 0.5s;
+      background-color: $hover-day-background-color;
+      transform: translateY(-20px);
+    }
   }
 }
