--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,7 +28,7 @@ html {
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
-  gap: 1px;
+  gap: $size-gap;
   padding: 10px;
   width: 726px;
 
