--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -67,7 +67,7 @@ html {
 
     &:hover {
       cursor: pointer;
-      transition: transform 0.5s;
+      transition: all 0.5s;
       background-color: $hover-day-background-color;
       transform: translateY(-20px);
     }
