--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,10 @@
+@import '../blocks/variables';
+@import '../blocks/calendar';
+
 body {
   margin: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
