‘calendar-small-fix’

--- a/src/blocks/calendar.scss
+++ b/src/blocks/calendar.scss
@@ -6,7 +6,7 @@
   padding: 10px;
 
   @each $day, $day-num in $weekdays {
-    &--start-day-#{$day} :first-child {
+    &--start-day-#{$day}:first-child {
       margin-left: calc(
         ($calendar-block-size + $calendar-block-gap) * $day-num
       );
@@ -14,7 +14,7 @@
   }
 
   @for $i from 28 through 31 {
-    &--month-length-#{$i} :nth-child(n + #{$i + 1}) {
+    &--month-length-#{$i}:nth-child(n + #{$i + 1}) {
       display: none;
     }
   }
@@ -24,7 +24,7 @@
     height: $calendar-block-size;
     width: $calendar-block-size;
     background-color: #eee;
-    border: 1px;
+    border: 1px solid;
     border-style: solid;
     box-sizing: border-box;
     display: flex;
