‘calendar-small-fix-2’

--- a/src/blocks/calendar.scss
+++ b/src/blocks/calendar.scss
@@ -44,5 +44,7 @@
 
   &__day:hover {
     background-color: #ffbfcb;
+    transform: translateY(-20px);
+    transition: transform 0.5s ease;
   }
 }
