Fixed CSS issues and updated layout_calendar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,7 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 .calendar {
@@ -29,16 +29,14 @@ body {
   position: relative;
   cursor: pointer;
   will-change: transform, background-color;
-  transition:
-    transform 0.5s,
-    background-color 0.5s;
+  transition: transform 0.5s, background-color 0.5s;
 }
 
 .calendar__day::before {
-  content: '';
+  content: "";
   display: block;
   font-size: 30px;
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   color: #000;
 }
 
@@ -48,160 +46,157 @@ body {
 }
 
 .calendar__day:nth-child(1)::before {
-  content: '1';
+  content: "1";
 }
 
 .calendar__day:nth-child(2)::before {
-  content: '2';
+  content: "2";
 }
 
 .calendar__day:nth-child(3)::before {
-  content: '3';
+  content: "3";
 }
 
 .calendar__day:nth-child(4)::before {
-  content: '4';
+  content: "4";
 }
 
 .calendar__day:nth-child(5)::before {
-  content: '5';
+  content: "5";
 }
 
 .calendar__day:nth-child(6)::before {
-  content: '6';
+  content: "6";
 }
 
 .calendar__day:nth-child(7)::before {
-  content: '7';
+  content: "7";
 }
 
 .calendar__day:nth-child(8)::before {
-  content: '8';
+  content: "8";
 }
 
 .calendar__day:nth-child(9)::before {
-  content: '9';
+  content: "9";
 }
 
 .calendar__day:nth-child(10)::before {
-  content: '10';
+  content: "10";
 }
 
 .calendar__day:nth-child(11)::before {
-  content: '11';
+  content: "11";
 }
 
 .calendar__day:nth-child(12)::before {
-  content: '12';
+  content: "12";
 }
 
 .calendar__day:nth-child(13)::before {
-  content: '13';
+  content: "13";
 }
 
 .calendar__day:nth-child(14)::before {
-  content: '14';
+  content: "14";
 }
 
 .calendar__day:nth-child(15)::before {
-  content: '15';
+  content: "15";
 }
 
 .calendar__day:nth-child(16)::before {
-  content: '16';
+  content: "16";
 }
 
 .calendar__day:nth-child(17)::before {
-  content: '17';
+  content: "17";
 }
 
 .calendar__day:nth-child(18)::before {
-  content: '18';
+  content: "18";
 }
 
 .calendar__day:nth-child(19)::before {
-  content: '19';
+  content: "19";
 }
 
 .calendar__day:nth-child(20)::before {
-  content: '20';
+  content: "20";
 }
 
 .calendar__day:nth-child(21)::before {
-  content: '21';
+  content: "21";
 }
 
 .calendar__day:nth-child(22)::before {
-  content: '22';
+  content: "22";
 }
 
 .calendar__day:nth-child(23)::before {
-  content: '23';
+  content: "23";
 }
 
 .calendar__day:nth-child(24)::before {
-  content: '24';
+  content: "24";
 }
 
 .calendar__day:nth-child(25)::before {
-  content: '25';
+  content: "25";
 }
 
 .calendar__day:nth-child(26)::before {
-  content: '26';
+  content: "26";
 }
 
 .calendar__day:nth-child(27)::before {
-  content: '27';
+  content: "27";
 }
 
 .calendar__day:nth-child(28)::before {
-  content: '28';
+  content: "28";
 }
 
 .calendar__day:nth-child(29)::before {
-  content: '29';
+  content: "29";
 }
 
 .calendar__day:nth-child(30)::before {
-  content: '30';
+  content: "30";
 }
 
 .calendar__day:nth-child(31)::before {
-  content: '31';
+  content: "31";
 }
 
 .calendar--start-day-mon .calendar__day:first-child {
-  margin-left: 0;
+  margin-left: calc(0px);
 }
 
 .calendar--start-day-tue .calendar__day:first-child {
-  margin-left: 101px;
+  margin-left: calc(101px);
 }
 
 .calendar--start-day-wed .calendar__day:first-child {
-  margin-left: 202px;
+  margin-left: calc(202px);
 }
 
 .calendar--start-day-thu .calendar__day:first-child {
-  margin-left: 303px;
+  margin-left: calc(303px);
 }
 
 .calendar--start-day-fri .calendar__day:first-child {
-  margin-left: 404px;
+  margin-left: calc(404px);
 }
 
 .calendar--start-day-sat .calendar__day:first-child {
-  margin-left: 505px;
+  margin-left: calc(505px);
 }
 
 .calendar--start-day-sun .calendar__day:first-child {
-  margin-left: 606px;
+  margin-left: calc(606px);
 }
 
-.calendar--month-length-28 .calendar__day:nth-child(n + 29),
-.calendar--month-length-29 .calendar__day:nth-child(n + 30),
-.calendar--month-length-30 .calendar__day:nth-child(n + 31),
-.calendar--month-length-31 .calendar__day:nth-child(n + 32) {
+.calendar--month-length-28 .calendar__day:nth-child(n+29), .calendar--month-length-29 .calendar__day:nth-child(n+30), .calendar--month-length-30 .calendar__day:nth-child(n+31), .calendar--month-length-31 .calendar__day:nth-child(n+32) {
   display: none;
 }
