--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,19 +14,21 @@ body {
 }
 
 .calendar {
-  width: 726px;
+  display: flex;
   flex-wrap: wrap;
   gap: 1px;
+  width: 726px;
   padding: 10px;
-  display: flex;
   background-color: $bgColor;
 
   // build each day box
   &__day {
     background-color: #eee;
+    box-sizing: border-box;
+    border: 1px solid black;
     width: 100px;
     height: 100px;
-    border: 1px solid black;
+    transition: 0.5s;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,7 +59,7 @@ body {
 
   // code for numbers in center of boxes
   @for $i from 1 through 31 {
-    &__day:nth-child(#{$i}):before {
+    &__day:nth-child(#{$i})::before {
       content: '#{$i}';
       color: black;
       display: block;
@@ -69,8 +71,6 @@ body {
       cursor: pointer;
       background-color: #ffbfcb;
       transform: translate(0, -20px);
-      animation-name: move;
-      animation-duration: 0.5s;
     }
   }
 
