--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,7 +24,7 @@ body {
 }
 
 .calendar {
-  width: (($calendar-day-size + $calendar-day-gap) * 7) - $calendar-day-gap;
+  width: ((($calendar-day-size + $calendar-day-gap) * 7) - $calendar-day-gap);
   display: flex;
   flex-wrap: wrap;
   gap: $calendar-day-gap;
