--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,77 @@
 body {
   margin: 0;
 }
+
+$day-size: 100px;
+$border-size: 1px;
+$day-gap: 1px;
+$day-bg: #eee;
+$hover-bg: #ffbfcb;
+$font-size: 30px;
+$font-color: #000;
+$days: (
+  sun: 6,
+  mon: 0,
+  tue: 1,
+  wed: 2,
+  thu: 3,
+  fri: 4,
+  sat: 5,
+);
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  width: 706px;
+  margin: auto;
+  padding: 10px;
+  gap: 1px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    cursor: pointer;
+    color: $font-color;
+    box-sizing: border-box;
+    background-color: $day-bg;
+    width: $day-size;
+    height: $day-size;
+    border: solid $border-size #000;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition:
+      background-color 0.5s,
+      transform 0.5s;
+
+    &:hover {
+      background-color: $hover-bg;
+      transform: translateY(-20px);
+    }
+
+    @for $day from 1 through 31 {
+      &:nth-child(#{$day})::before {
+        font-family: Arial, sans-serif;
+        font-size: $font-size;
+        content: '#{$day}';
+      }
+    }
+  }
+}
+
+@each $day, $i in $days {
+  .calendar--start-day-#{$day} {
+    .calendar__day:nth-child(1) {
+      margin-left: ($day-size * ($i) + ($day-size * ($i) / 100));
+    }
+  }
+}
