--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,63 @@
-body {
+@import './variables';
+
+.page__body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
   margin: 0;
+  box-sizing: border-box;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar {
+  box-sizing: border-box;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $space-between-days;
+  width: $container-size;
+  padding: $calendar-padding;
+
+  @for $days from 28 through 31 {
+    &--month-length-#{$days} {
+      @for $i from ($days + 1) through 32 {
+        .calendar__day:nth-child(#{$i}) {
+          display: none;
+        }
+      }
+    }
+  }
+
+  @each $name, $week-day in $week-days {
+    &--start-day-#{$name} > div:nth-child(1) {
+      margin-left: ($week-day - 1) * ($calendar-day-size + $space-between-days);
+    }
+  }
+
+  &__day {
+    box-sizing: border-box;
+    width: $calendar-day-size;
+    height: $calendar-day-size;
+    border: 1px solid black;
+    background-color: $calendar-day-color;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @for $i from 1 to 32 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+      transition-duration: 0.5s;
+    }
+  }
 }
