--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,80 @@
+$border-color: black;
+$border-width: 1px;
+$cell-size: 100px;
+$gap-size: 1px;
+$columns: 7;
+$padding: 10px;
+$text-color: black;
+$hover-color: #ffbfcb;
+$animation-duration: 0.5s;
+
 body {
-  margin: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: calc(
+    ($cell-size + $border-width * 2 + $gap-size) * $columns + $padding * 2
+  );
+  padding: $padding;
+  gap: $gap-size;
+
+  &__day {
+    width: $cell-size;
+    height: $cell-size;
+    background-color: #eee;
+    border: $border-width solid $border-color;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+    color: $text-color;
+    transition:
+      transform $animation-duration,
+      background-color $animation-duration;
+
+    &:hover {
+      cursor: pointer;
+      background-color: $hover-color;
+      transform: translateY(-20px);
+    }
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+      }
+    }
+  }
+
+  $days: (
+    mon: 0,
+    tue: 1,
+    wed: 2,
+    thu: 3,
+    fri: 4,
+    sat: 5,
+    sun: 6,
+  );
+
+  @each $day, $value in $days {
+    &--start-day-#{$day} {
+      .calendar__day:first-child {
+        margin-left: calc(
+          ($cell-size + $border-width * 2 + $gap-size) * $value
+        );
+      }
+    }
+  }
+
+  @for $length from 28 through 31 {
+    &--month-length-#{$length} .calendar__day:nth-child(n + #{$length + 1}) {
+      display: none;
+    }
+  }
 }
